--- a/index.html
+++ b/index.html
@@ -1,10 +1,189 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Streamlit App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Md Moshiur Rahman - Creative Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-20px); }
+            100% { transform: translateY(0px); }
+        }
+        @keyframes twinkle {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.5; }
+        }
+        .floating { animation: float 6s ease-in-out infinite; }
+        .star {
+            position: absolute;
+            width: 2px;
+            height: 2px;
+            background: white;
+            border-radius: 50%;
+        }
+        .twinkle { animation: twinkle 3s infinite; }
+        .shooting-star {
+            position: absolute;
+            width: 100px;
+            height: 1px;
+            background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+            animation: shoot 3s linear infinite;
+            opacity: 0;
+        }
+        @keyframes shoot {
+            0% { transform: translateX(-100px) translateY(0); opacity: 1; }
+            100% { transform: translateX(calc(100vw + 100px)) translateY(calc(100vh + 100px)); opacity: 0; }
+        }
+        .glow { text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff, 0 0 30px #00ffff; }
+        .neon-border { box-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff, 0 0 30px #00ffff; }
+    </style>
 </head>
-<body>
-  <iframe src="https://mhridoy-test2-1-index-w7etll.streamlit.app/"></iframe>
+<body class="bg-gray-900 text-white font-sans overflow-x-hidden">
+    <div id="stars"></div>
+    <div id="shooting-stars"></div>
+
+    <header class="py-6 relative z-10">
+        <div class="container mx-auto px-4 text-center">
+            <h1 class="text-5xl font-bold mb-2 glow floating">Md Moshiur Rahman</h1>
+            <p class="text-xl mt-2 text-blue-300">Crafting Digital Experiences Through Code</p>
+        </div>
+    </header>
+
+    <nav class="bg-opacity-30 bg-blue-900 backdrop-blur-md py-4 sticky top-0 z-20">
+        <div class="container mx-auto px-4 flex justify-center space-x-6">
+            <a href="#experience" class="hover:text-blue-300 transition duration-300">Experience</a>
+            <a href="#skills" class="hover:text-blue-300 transition duration-300">Skills</a>
+            <a href="#projects" class="hover:text-blue-300 transition duration-300">Projects</a>
+            <a href="#interests" class="hover:text-blue-300 transition duration-300">Interests</a>
+        </div>
+    </nav>
+
+    <main class="container mx-auto px-4 py-8">
+        <section id="experience" class="mb-12">
+            <h2 class="text-3xl font-bold mb-6 glow">Stellar Experience</h2>
+            
+            <div class="bg-opacity-10 bg-white rounded-lg p-6 mb-6 backdrop-blur-md neon-border">
+                <h3 class="text-2xl font-semibold text-blue-300">Software Engineer </h3>
+                <p class="text-gray-300">NeuroLeap Corp • 2022 - Present</p>
+                <p class="mt-2"> Software Engineering/Development, related to AI/ML, for various screening, assessment</p>
+            </div>
+
+            <div class="bg-opacity-10 bg-white rounded-lg p-6 mb-6 backdrop-blur-md neon-border">
+                <h3 class="text-2xl font-semibold text-blue-300">Coding Instructor</h3>
+                <p class="text-gray-300">Dreamers Academy • September 2023 - Present</p>
+                <ul class="list-disc list-inside mt-2 text-gray-200">
+                    <li>Igniting young minds with the magic of code</li>
+                    <li>Crafting engaging online learning experiences</li>
+                    <li>Mentoring future tech innovators</li>
+                </ul>
+            </div>
+
+            <div class="bg-opacity-10 bg-white rounded-lg p-6 backdrop-blur-md neon-border">
+                <h3 class="text-2xl font-semibold text-blue-300">Java and Python Guru</h3>
+                <p class="text-gray-300">eShikhon • February 2021 - August 2023</p>
+                <ul class="list-disc list-inside mt-2 text-gray-200">
+                    <li>Empowering professionals with coding superpowers</li>
+                    <li>Architecting robust web applications</li>
+                    <li>Demystifying complex programming concepts</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="skills" class="mb-12">
+            <h2 class="text-3xl font-bold mb-6 glow">Cosmic Skill Set</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                <div class="bg-opacity-10 bg-white rounded-lg p-6 backdrop-blur-md neon-border">
+                    <h3 class="text-2xl font-semibold mb-2 text-blue-300">Programming Languages</h3>
+                    <p class="text-gray-200">Python • Java • C++</p>
+                </div>
+                <div class="bg-opacity-10 bg-white rounded-lg p-6 backdrop-blur-md neon-border">
+                    <h3 class="text-2xl font-semibold mb-2 text-blue-300">Libraries & Frameworks</h3>
+                    <p class="text-gray-200">Keras • NumPy • Sci-kit learn • SciPy • Pandas • OpenCV • Streamlit • Beautifulsoup • Django • JavaFX</p>
+                </div>
+                <div class="bg-opacity-10 bg-white rounded-lg p-6 backdrop-blur-md neon-border">
+                    <h3 class="text-2xl font-semibold mb-2 text-blue-300">Tools & Platforms</h3>
+                    <p class="text-gray-200">Git • GitHub • Heroku • Digital Ocean • AWS • Azure • Firebase • Storybook</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="projects" class="mb-12">
+            <h2 class="text-3xl font-bold mb-6 glow">Galactic Projects</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="bg-opacity-10 bg-white rounded-lg p-6 backdrop-blur-md neon-border">
+                    <h3 class="text-2xl font-semibold mb-2 text-blue-300">Binary Beats Web Editor</h3>
+                    <p class="text-gray-200">An immersive coding sanctuary where developers of all levels can craft their digital symphonies.</p>
+                </div>
+                <div class="bg-opacity-10 bg-white rounded-lg p-6 backdrop-blur-md neon-border">
+                    <h3 class="text-2xl font-semibold mb-2 text-blue-300">CodeSage Portal</h3>
+                    <p class="text-gray-200">A mystical gateway to knowledge, where students embark on coding quests and showcase their arcane creations.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="interests" class="mb-12">
+            <h2 class="text-3xl font-bold mb-6 glow">Nebulae of Interests</h2>
+            <div class="bg-opacity-10 bg-white rounded-lg p-6 backdrop-blur-md neon-border">
+                <p class="text-gray-200">Weaving words into poetry • Mastering the art of cricket • Exploring vast universes in science fiction • Decoding the language of cinema</p>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-opacity-30 bg-blue-900 backdrop-blur-md py-6">
+        <div class="container mx-auto px-4 text-center">
+            <div class="flex justify-center space-x-6 mb-4">
+                <a href="mailto:mhridoy.me@gmail.com" class="hover:text-blue-300 transition duration-300">
+                    <i class="fas fa-envelope"></i>
+                </a>
+                <a href="tel:+8801752175087" class="hover:text-blue-300 transition duration-300">
+                    <i class="fas fa-phone"></i>
+                </a>
+                <a href="https://github.com/mhridoy" target="_blank" rel="noopener noreferrer" class="hover:text-blue-300 transition duration-300">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://moshiurrahman.page" target="_blank" rel="noopener noreferrer" class="hover:text-blue-300 transition duration-300">
+                    <i class="fas fa-globe"></i>
+                </a>
+            </div>
+            <p class="text-blue-200">&copy; 2024 Md Moshiur Rahman. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script>
+        function createStars() {
+            const starsContainer = document.getElementById('stars');
+            for (let i = 0; i < 100; i++) {
+                const star = document.createElement('div');
+                star.className = 'star';
+                star.style.left = `${Math.random() * 100}vw`;
+                star.style.top = `${Math.random() * 100}vh`;
+                if (Math.random() > 0.5) {
+                    star.classList.add('twinkle');
+                }
+                starsContainer.appendChild(star);
+            }
+        }
+
+        function createShootingStars() {
+            const shootingStarsContainer = document.getElementById('shooting-stars');
+            setInterval(() => {
+                const star = document.createElement('div');
+                star.className = 'shooting-star';
+                star.style.left = `${Math.random() * 100}vw`;
+                star.style.top = `${Math.random() * 100}vh`;
+                star.style.transform = `rotate(${Math.random() * 180}deg)`;
+                shootingStarsContainer.appendChild(star);
+                setTimeout(() => {
+                    star.remove();
+                }, 3000);
+            }, 5000);
+        }
+
+        createStars();
+        createShootingStars();
+    </script>
 </body>
 </html>
